--- a/.github/workflows/zap-baseline.yml
+++ b/.github/workflows/zap-baseline.yml
@@ -7,6 +7,10 @@ on:
     branches: [main, master]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  issues: write
+
 jobs:
   zap-baseline-scan:
     name: ZAP Baseline Security Scan
@@ -42,6 +46,9 @@ jobs:
           target: 'http://localhost:5000'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue_title: 'ZAP Baseline Scan Report'
+          fail_action: false
 
       - name: Upload ZAP Baseline Report
         uses: actions/upload-artifact@v4
