--- a/.github/workflows/zap-full.yml
+++ b/.github/workflows/zap-full.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 2 * * 0'  # Weekly on Sunday at 2 AM
   workflow_dispatch:  # Allow manual trigger
 
+permissions:
+  contents: read
+  issues: write
+
 jobs:
   zap-full-scan:
     name: ZAP Full Security Scan
@@ -46,6 +50,9 @@ jobs:
           target: 'http://localhost:5000'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a -j'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue_title: 'ZAP Full Scan Report'
+          fail_action: false
 
       - name: Upload ZAP Full Report (HTML)
         uses: actions/upload-artifact@v4
