Update SonarCloud organization to personal account

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 # sonar-project.properties
 # Project key will be set via environment variable in GitHub Actions
-# sonar.projectKey=keldenpdorji-1_cicd-demo_sq
-sonar.organization=keldenpdorji-1
+# sonar.projectKey=namgyelhuk708_SWE302_PA4c
+sonar.organization=namgyelhuk708
 
 # Metadata
-sonar.projectName=CICD Demo
+sonar.projectName=SWE302_PA4c
 sonar.projectVersion=1.0
 
 # Path to source code
