--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<description>CICD Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
-		<sonar.organization>keldenpdorji-1</sonar.organization>
+		<sonar.organization>namgyelhuk708</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<maven.wagon.http.retryHandler.count>5</maven.wagon.http.retryHandler.count>
